--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
     <link rel="shortcut icon" href="assets/pictures/favicon-32x32.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-light quiz-game-nav">
             <a class="navbar-brand" href="index.html">
-            <img src="assets/pictures/android-chrome-192x192.png" width="35" height="35" class="d-inline-block align-top" alt="Quiz Game"></a>
-            <h1 href="index.html">Quiz Game</h1>
+                <img src="assets/pictures/android-chrome-192x192.png" width="35" height="35"
+                    class="d-inline-block align-top" alt="Quiz Game"></a>
+            <!-- <h1 href="index.html">Quiz Game</h1> -->
+            <h1><a href="index.html" class="quiz-game-nav">Quiz Game</a></h1>
         </nav>
     </header>
     <main class="container">
         <div class="jumbotron row my-5 text-center my-background">
-            <div class="col-lg-8 mx-auto text-color">
-                <h1>Welcome</h1>
-                <h5>First time visitor? Why not enjoy our QUIZ!</h5>
+            <div id="main-container" class="col-lg-8 mx-auto text-color">
+                <h2 id="welcome-header">Welcome</h2>
+                <h5 id="question-visitor">First time here? Why don't you try our QUIZ!</h5>
                 <hr class="mb-5">
-                <h5>Ready to check your knowledge for JavaScript?</h5>
-                <h5>Pres <span class="play">Play Now!</span> button to start.</h5>
+                <div id="game-instructions">
+                    <h5 id="ready-question">Ready to check your knowledge for JavaScript?
+                        <br>
+                        <br>
+                        Pres <span class="play">Play Now!</span> button to start.
+                    </h5>
+                </div>
                 <hr class=" m-5">
-                <button type="button" class="btn btn-play btn-lg ">Play Now!</button>
-                <button type="button" class="btn btn-cancel btn-lg">Not ready, yet</button>
+                <div id="button-choices">
+                    <button id="playNow" type="button" class="btn btn-play btn-lg ">Play Now!</button>
+                    <button type="button" class="btn btn-cancel btn-lg">Not ready, yet</button>
+                </div>
             </div>
         </div>
     </main>
+    <script src="assets/script.js"></script>
 </body>
+
 </html>
