Function for timer countDown to appear after .createElement with Transversing the DOM; setted new attributes, changed answers as <button> not <p>...

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         </nav>
     </header>
     <main class="container">
-        <div class="jumbotron row my-5 text-center my-background">
+        <div class="rounded-lg row my-5 p-4 text-center my-background">
             <div id="main-container" class="col-lg-8 mx-auto text-color">
-                <h2 id="welcome-header">Welcome</h2>
-                <h5 id="question-visitor">First time here? Why don't you try our QUIZ!</h5>
-                <hr class="mb-5">
+                <div id="welcome-container">
+                    <h2 id="welcome-header">Welcome</h2>
+                    <h5 id="question-visitor">First time here? Why don't you try our QUIZ!</h5>
+                    <hr class="mb-5">
+                </div>
                 <div id="game-instructions">
                     <h5 id="ready-question">Ready to check your knowledge for JavaScript?
                         <br>
