added on click to check the answer, userScore and stop when time is out or all questions answered

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <main class="container">
         <div class="rounded-lg row my-5 p-4 text-center my-background">
             <div id="main-container" class="col-lg-8 mx-auto text-color">
+                <span id="given-time" class="btn bg-warning btn-lg hidden">Just 60 seconds!</span>
                 <div id="welcome-container">
                     <h2 id="welcome-header">Welcome</h2>
                     <h5 id="question-visitor">First time here? Why don't you try our QUIZ!</h5>
-                    <hr class="mb-5">
                 </div>
+                <hr class="mb-3">
                 <div id="game-instructions">
                     <h5 id="ready-question">Ready to check your knowledge for JavaScript?
                         <br>
@@ -36,7 +37,7 @@
                         Pres <span class="play">Play Now!</span> button to start.
                     </h5>
                 </div>
-                <hr class=" m-5">
+                <hr class="mb-5">
                 <div id="button-choices">
                     <button id="playNow" type="button" class="btn btn-play btn-lg ">Play Now!</button>
                     <button type="button" class="btn btn-cancel btn-lg">Not ready, yet</button>
