Added if Correct or Wrong answer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="assets/pictures/android-chrome-192x192.png" width="35" height="35"
                     class="d-inline-block align-top" alt="Quiz Game"></a>
             <!-- <h1 href="index.html">Quiz Game</h1> -->
-            <h1><a href="index.html" class="quiz-game-nav">Quiz Game</a></h1>
+            <h1><a id="title-check" href="index.html" class="quiz-game-nav">Quiz Game</a></h1>
         </nav>
     </header>
     <main id="main-content" class="container">
