little changes - deleting unnecessary comments..>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main id="main-content" class="container">
         <div class="rounded-lg row my-5 p-3 text-center my-background">
-            <div id="main-container" class="col-lg-8 mx-auto text-color">
+            <div id="main-container" class="col-8 mx-auto text-color">
                 <span id="given-time" class="btn bg-warning btn-lg hidden">Just 60 seconds!</span>
                 <div id="welcome-container">
                     <h2 id="welcome-header">Welcome</h2>
